--- a/news/templates/base.html
+++ b/news/templates/base.html
@@ -1,11 +1,21 @@
+{% load static %}
+
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>{% block title %}{% endblock %}</title>
+    <link rel="stylesheet" href="{% static 'css/style.css' %}">
 </head>
 <body>
-    
+    <header class="header">
+        <ul class="header-links">
+            <li>
+                <a href="{% url 'home-page' %}">Home</a>
+            </li>
+        </ul>
+    </header>
+    {% block content %}{% endblock %}
 </body>
 </html>
