Req 04: corrige home.html (data formatada).html

--- a/news/templates/home.html
+++ b/news/templates/home.html
@@ -7,7 +7,7 @@
 {% for new in news %}
 <div>
     <h2 class="news-title">{{ new.title }}</h2>
-    <span class="news-date">{{ new.created_at }}</span>
+    <span class="news-date">{{ new.created_at|date:"d/m/Y" }}</span>
     <img src="{% static new.image.url %}">
 </div>
 {% endfor %}
