Req 06: implementa estrutura de categories_form.html e atualiza base.html

--- a/news/templates/categories_form.html
+++ b/news/templates/categories_form.html
@@ -1,1 +1,14 @@
 {% extends "base.html" %}
+{% load static %}
+
+{% block title %}Formulário para Nova Categoria{% endblock %}
+
+{% block content %}
+<div>
+    <form method="post" action="">
+        {% csrf_token %}
+        {{ forms.as_div }}
+        <button type="submit">Salvar</button>
+    </form>
+</div>
+{% endblock %}
